Massively improved aria, accessibility & navigation functionality relating to the editor and settings pages, added a new component: word wrap, fixed a bug with the menu buttons on the nesting page, fixed some bugs too

--- a/styles/editor.css
+++ b/styles/editor.css
@@ -243,6 +243,7 @@
   color: var(--shades-lighter);
   font-size: 1rem;
   min-width: 15em;
+  cursor: auto;
 
   &:hover {
     border-color: var(--pri-colour-darker);
